--- a/webpackThree/index.html
+++ b/webpackThree/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Webpack Practice</title>
+    <title>Webpack Practice 3</title>
 </head>
 <body>
-    <h1>Webpack 1</h1>
+    <h1>Webpack 3</h1>
+
     <script src="./dist/bundle.js"></script>
 </body>
 </html>
