--- a/webpackTwo/index.html
+++ b/webpackTwo/index.html
@@ -7,6 +7,7 @@
     <title>Webpack Practice 2</title>
 </head>
 <body>
-    <script src="/dist/bundle.js"></script>
+    <h1>Webpack 2</h1>
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
